1999-08-27  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* character.h (charset_by_leading_byte): Use `NUM_LEADING_BYTES'
	instead of 128.
	(CHARSET_BY_LEADING_BYTE): Use `MIN_LEADING_BYTE' and
	`NUM_LEADING_BYTES' instead of 128.

1999-08-26  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* mule-charset.h (charset_by_leading_byte): Use
	`NUM_LEADING_BYTES' instead of 128.
	(CHARSET_BY_LEADING_BYTE): Use `MIN_LEADING_BYTE' instead of 128.

	* mule-charset.c (charset_by_leading_byte): Use
	`NUM_LEADING_BYTES' instead of 128.
	(make_charset): Use `MIN_LEADING_BYTE' instead of 128.

	* faces.h (FACE_CACHEL_FONT): Use `MIN_LEADING_BYTE' instead of
	128.

1999-08-25  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* mule-charset.c (syms_of_mule_charset): Update to
	0.4 (Shin-Imamiya).

1999-07-13 Daiki Ueno <ueno@ueda.info.waseda.ac.jp>

	* file-coding.c (encode_coding_sjis): New implementation for
	UTF2000.  (decode_coding_sjis): Ditto.

1999-06-17  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* mule-charset.c, character.h (Bytecount rep_bytes_by_first_byte):
	Don't define in UTF2000.

	* character.h: Include mule-charset.h if CHAR_IS_UCS4 is not
	defined.

	* redisplay-msw.c, objects-tty.c, objects-msw.c, mule-wnnfns.c,
	mule-ccl.c, lstream.h, buffer.h: Include character.h in every
	MULE.

1999-06-17  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* config.h.in (CHAR_IS_UCS4): New macro.

	* mule-charset.c (rep_bytes_by_first_byte): Modify for
	conventional MULE representation.
	(syms_of_mule_charset): Update to 0.3 (Imamiya).

	* mule-charset.h: Reverted to original.

	* redisplay-msw.c, objects-tty.c, objects-msw.c, mule-wnnfns.c,
	mule-ccl.c, lstream.h, buffer.h: Use "character.h" instead of
	"mule-charset.h" if CHAR_IS_UCS4 is defined.

	* character.h: New file.

	* file-coding.c (Fmake_coding_system): Set 1 to
	`codesys->fixed.size' if TYPE is `no-conversion' and UTF2000 is
	defined.
	(encode_coding_no_conversion): New implementation for UTF2000.

	* file-coding.h (struct Lisp_Coding_System): Add new member